--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "tutorial-nodejs",
   "version": "1.0.0",
   "description": "# Header - content - cookies",
-  "main": "nodeServer.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon nodeServer.js"
+    "start": "NODE_ENV=Production node server",
+    "dev": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/simple-sifu/tutorial-nodejs#readme",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "prettier": "2.8.7"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2"
   }
 }
