--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   },
   "homepage": "https://github.com/simple-sifu/tutorial-nodejs#readme",
   "devDependencies": {
-    "nodemon": "^2.0.22",
-    "prettier": "2.8.7"
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
