--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./server/server.js",
   "scripts": {
     "start": "NODE_ENV=Production node ./server/server",
-    "dev": "nodemon ./server/server"
+    "dev": "nodemon ./server/server",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
