--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "# Header - content - cookies",
   "main": "./server/server.js",
   "scripts": {
-    "start": "NODE_ENV=Production node ./server/server",
-    "dev": "nodemon ./server/server",
-    "test": "jest --watch"
+    "build": "webpack --config=webpack.config.dev.js",
+    "build-prod": "webpack --config=webpack.config.prod.js",
+    "start": "concurrently \"nodemon ./server/server\" \"webpack-dev-server --config=webpack.config.dev.js\"",
+    "test": "jest --watch",
+    "start_old": "NODE_ENV=Production node ./server/server",
+    "dev_old": "nodemon ./server/server",
+    "dev": "concurrently \"cross-env NODE_ENV=development webpack-dev-server --open --hot --inline --progress --colors --watch --content-base ./\" \"nodemon ./server/server.js\""
   },
   "repository": {
     "type": "git",
@@ -27,10 +31,24 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.5.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.1",
+    "mini-css-extract-plugin": "^2.7.5",
+    "sass": "^1.62.0",
+    "sass-loader": "^13.2.2",
+    "style-loader": "^3.3.2",
+    "webpack": "^5.79.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.13.3"
   },
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@babel/preset-react": "^7.18.6",
+    "axios": "^1.3.5"
   }
 }
