--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --config=webpack.config.dev.js",
     "build-prod": "webpack --config=webpack.config.prod.js",
     "start": "concurrently \"nodemon ./server/server\" \"webpack-dev-server --config=webpack.config.dev.js\"",
+    "server": "nodemon ./server/server",
     "test": "jest --watch",
     "start_old": "NODE_ENV=Production node ./server/server",
     "dev_old": "nodemon ./server/server",
@@ -23,32 +24,39 @@
   },
   "homepage": "https://github.com/simple-sifu/tutorial-nodejs#readme",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
     "@jest/globals": "^29.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "babel-loader": "^9.1.2",
+    "concurrently": "^8.0.1",
+    "css-loader": "^6.7.3",
+    "dotenv": "^16.0.3",
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.5.0",
-    "nodemon": "^2.0.22",
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "babel-loader": "^9.1.2",
-    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.1",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.7.5",
+    "nodemon": "^2.0.22",
     "sass": "^1.62.0",
     "sass-loader": "^13.2.2",
     "style-loader": "^3.3.2",
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.13.3"
+    "webpack-dev-server": "^4.13.3",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "axios": "^1.3.5",
     "express": "^4.18.2",
-    "@babel/preset-react": "^7.18.6",
-    "axios": "^1.3.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
