--- a/package.json
+++ b/package.json
@@ -51,15 +51,15 @@
     "webpack": "^5.79.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.3",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "react-redux": "^8.0.5",
+    "redux-saga": "^1.2.3",
+    "@reduxjs/toolkit": "^1.9.5"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.5",
     "express": "^4.18.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "redux-saga": "^1.2.3"
+    "react-dom": "^18.2.0"
   }
 }
