--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "cors": "^2.8.5",
+    "dotenv-webpack": "^8.0.1",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
